# sandDrop

./: CMakeLists.txt  main.cpp
.cache/clangd/index/: main.cpp.B2D8301116A85925.idx
